5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_1014.log
== TEST (2019-03-24 17:02:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
valor das vendas = float(input("qual o valor tota das vendas?"))
print(float((30/100)*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:03:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
valor das vendas = float(input("qual o valor tota das vendas?"))
print(float((30/100)*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:03:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
print(float((30/100)*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:04:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
print(float((30/100)*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:04:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
print(float((30/100)*total de vendas)
-- EXECUTION TIME:
0.137737
-- ERROR:
  File "/home/codebench/codes/1590/1014/main.py", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:05:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = int(input("qual o total de vendas?"))
print(float(30%*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:06:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total das vendas = int(input("qual o total de vendas?"))
print(float((30/100)*total das vendas)
-- ERROR:
File "XXXX", line 4
    total das vendas = int(input())
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:06:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = float(input("qual o total de vendas?"))
print(float((30/100)*total de vendas)
-- ERROR:
File "XXXX", line 4
    total de vendas = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:07:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = float(input("qual o total de vendas?"))
print(float(round((30/100)*total de vendas), 3)
-- ERROR:
File "XXXX", line 4
    total de vendas = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:09:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total de vendas = float(input("qual o total de vendas?"))
valor das vendas = float(input("qual o valor das vendas?")
lucro = float(input(30/100*valor das vendas))
print(lucro)								 
-- ERROR:
File "XXXX", line 4
    total de vendas = float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:10:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total = float(input("qual o total de vendas?"))
valor das vendas = float(input("qual o valor das vendas?")
lucro = float(input(30/100*valor das vendas))
print(lucro)								 
-- ERROR:
File "XXXX", line 5
    valor das vendas = float(input()
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:10:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = float(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input(30/100*valor das vendas))
print(lucro)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input(30/100*valor das vendas))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:10:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = float(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input(30/100*valor))
print(lucro)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input(30/100*valor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:11:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = float(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input((30/100)*valor))
print(lucro)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input((30/100)*valor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:11:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = float(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input((30/100)*valor))
print(float(round(lucro, 3)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input((30/100)*valor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:12:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = float(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input((30/100)*valor))
print(float(round(lucro, 3)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input((30/100)*valor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:12:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
lucro = float(input((30/100)*valor))
print(float(round(lucro, 3)								 
-- ERROR:
File "XXXX", line 6
    lucro = float(input((30/100)*valor))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:14:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o valor das vendas?")
belichilde = float(input("qual o lucro de belichilde?"))	  
print(float(round(belichilde, 3)								 
-- ERROR:
File "XXXX", line 6
    belichilde = float(input())	  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:15:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
						 
-- ERROR:
File "XXXX", line 6
    belichilde = float(input())	  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:17:36) 
-- CODE:
total de vendas = int(input("qual o total de vendas?"))
print(total de vendas)
-- ERROR:
File "XXXX", line 1
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:17:51) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
print(total de vendas)
-- ERROR:
File "XXXX", line 2
    print(total de vendas)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:17:59) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:19:20) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(input("qual o lucro?"))
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:22:06) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
total = float(input("qual o total de vendas?"))
lucro = ((30/100)*total)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:22:21) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
total = float(input("qual o total de vendas?"))
lucro = ((30/100)*total)
print(round(lucro, 2))

-- EXECUTION TIME:
0.18046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:22:45) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = ((30/100)*vendas)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:22:51) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = ((30/100)*vendas)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:22:56) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = ((30/100)*vendas)
print(round(lucro, 2))

-- EXECUTION TIME:
0.154921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:24:25) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = ((30/100)*valor)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:24:36) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = ((30/100)*valor)
print(round(lucro, 2))

-- EXECUTION TIME:
0.212362
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:25:07) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = ((30*valor)/100)
print(round(lucro, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:25:30) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = ((30*valor)/100)
print(round(lucro, 2))

-- EXECUTION TIME:
0.195283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:26:45) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro de bilichilde = float((30/100)*valor)
print(float(round(lucro de bilichilde, 2)))

-- ERROR:
File "XXXX", line 3
    lucro de bilichilde = float((30/100)*valor)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:26:57) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = float((30/100)*valor)
print(float(round(lucro, 2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:27:10) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = float((30/100)*valor)
print(float(round(lucro, 2)))

-- EXECUTION TIME:
0.183318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:28:34) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
print(float(round(valor*30/100, 2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:28:46) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
print(float(round(valor*30/100, 2)))

-- EXECUTION TIME:
0.227846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:30:29) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = float(input("qual o lucro de bilichilde?"))
print(float(round(lucro, 3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:31:07) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = float(input("qual o lucro de bilichilde?"))
print(float(round(lucro, 3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:31:41) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = float(input("qual o lucro total?"))
lucro = float(input("qual o lucro de bilichilde?"))
print(float(round(lucro, 2)))

-- EXECUTION TIME:
0.181819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:32:09) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(input("qual o lucro de bilichilde?"))
print(float(round(lucro, 2)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:32:27) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(input("qual o lucro de bilichilde?"))
print(float(round(lucro, 2)))

-- EXECUTION TIME:
0.170407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:33:17) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(float(round(lucro, 2)))

-- ERROR:
File "XXXX", line 4
    print(float(round(lucro, 2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:33:35) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(round(lucro, 2))

-- ERROR:
File "XXXX", line 4
    print(round(lucro, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:33:42) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(round(lucro, 2))
-- ERROR:
File "XXXX", line 4
    print(round(lucro, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:34:08) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(round("lucro", 2))
-- EXECUTION TIME:
0.232273
-- ERROR:
  File "/home/codebench/codes/1590/1014/main.py", line 4
    print(round("lucro", 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:34:19) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(lucro)
-- ERROR:
File "XXXX", line 4
    print(lucro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:34:49) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o lucro total?"))
lucro = float(valor*(30/100)
print(float(lucro)
-- ERROR:
File "XXXX", line 4
    print(float(lucro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:39:20) 
-- CODE:
vendas = int(input("qual o total de vendas?"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:41:23) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor total = int(input("qual o valor total?"))
print(float((30/100)*valor total)
-- ERROR:
File "XXXX", line 2
    valor total = int(input())
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:41:35) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(float((30/100)*valor)
-- ERROR:
File "XXXX", line 4
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:41:54) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(float((30/100)*valor)
-- ERROR:
File "XXXX", line 4
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:42:06) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(30/100)*valor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:42:30) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(30/100)*valor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:42:51) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(30/100)*valor
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:17) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(0,3*valor
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:26) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(0,3*valor
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:33) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(0,3*valor
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:46) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(float(0,3*valor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:42) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(int(0,3*valor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:44:53) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(int(0,3*valor))
-- EXECUTION TIME:
0.167166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:58) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(int(0,3*valor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:45) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(round(0,3*valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:45:57) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
valor = int(input("qual o valor total?"))
print(round(0,3*valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:48:01) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
print(float(round(venda*(30/100), 3))
-- ERROR:
File "XXXX", line 3
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:48:08) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
print(round(venda*(30/100), 3)
-- ERROR:
File "XXXX", line 3
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:48:15) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
print(round(vendas*(30/100), 3)
-- ERROR:
File "XXXX", line 3
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:55:20) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:55:37) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:55:37) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- EXECUTION TIME:
0.111488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:55:38) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:56:13) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:56:37) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:56:52) 
-- CODE:
vendas = int(input("qual o total de vendas?"))
lucro = float(vendas*(30/100))
print(round(lucro,2))

-- EXECUTION TIME:
0.136646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    vendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:58:47) 
-- CODE:
total de vendas = int(input("qual o total de vendas?"))
lucro = (30/100)*total de vendas
print(round(lucro,2))


-- ERROR:
File "XXXX", line 1
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:58:47) 
-- CODE:
total de vendas = int(input("qual o total de vendas?"))
lucro = (30/100)*total de vendas
print(round(lucro,2))


-- ERROR:
File "XXXX", line 1
    total de vendas = int(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:58:59) 
-- CODE:
total = int(input("qual o total de vendas?"))
lucro = (30/100)*total 
print(round(lucro,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:59:15) 
-- CODE:
total = int(input("qual o total de vendas?"))
lucro = (30/100)*total 
print(round(lucro,2))


-- EXECUTION TIME:
0.155761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:47) 
-- CODE:
total = int(input("qual o total de vendas?"))
x = (30/100)*total
print(round(x, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:15:59) 
-- CODE:
total = int(input("qual o total de vendas?"))
x = (30/100)*total
print(round(x, 2))


-- EXECUTION TIME:
0.139641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:16:17) 
-- CODE:
total = int(input("qual o total de vendas?"))
x = (30/100)*total
print(round(x, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:16:17) 
-- CODE:
total = int(input("qual o total de vendas?"))
x = (30/100)*total
print(round(x, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:16:49) 
-- CODE:
total = int(input("qual o total de vendas? "))
x = (30/100)*total
print(round(x, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:17:02) 
-- CODE:
total = int(input("qual o total de vendas? "))
x = (30/100)*total
print(round(x, 2))


-- EXECUTION TIME:
0.136392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 1, in <module>
    total = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:18:21) 
-- CODE:
total = float(input("qual o total de vendas? "))
x = (30/100)*total
print(round(x, 2))


-- EXECUTION TIME:
0.168116
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:34:47) 
-- CODE:
total = float(input("qual o total de vendas?"))
print(round(total*(30/100),2)


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:35:31) 
-- CODE:
total = float(input("qual o total de vendas?"))
lucro = total*30/100
print(round(lucro, 2)


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:35:48) 
-- CODE:
total = float(input("qual o total de vendas?"))



-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:36:55) 
-- CODE:
total = float(input("qual o total de vendas?"))
lucro = (30/100)*total
print(round(lucro, 2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:37:02) 
-- CODE:
total = float(input("qual o total de vendas?"))
lucro = (30/100)*total
print(round(lucro, 2))

-- EXECUTION TIME:
0.136687
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
